--- a/src/pages/list-match/list-match.scss
+++ b/src/pages/list-match/list-match.scss
@@ -10,19 +10,66 @@ page-list-match {
     .label-ios {
         margin: 0;
     }
-    .home-content {
-        background: url('../assets/images/bg/bg-main3.jpg') no-repeat;
-        background-size: cover;
-    }
     .toolbar-background {
         background-color: transparent;
     }
     .toolbar-title {
         display: flex;
         justify-content: center;
-        color: #E0BB92;
-        img {
-            width: 35vw;
+        color: white;
+        font-family: Gill Sans, Verdana;
+    }
+    .item-ios-light,
+    .item-divider-ios-light {
+        font-size: 3.5vw;
+        font-family: Gill Sans, Verdana;
+    }
+    .group-item {
+        margin-top: 5vw;
+    }
+    .group-item:first-child {
+        margin-top: 0vw !important;
+    }
+    .item-ios {
+        padding: 0 10px !important;
+    }
+    .label-ios {
+        display: flex;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        .time {
+            font-family: Gill Sans, Verdana;
+            font-size: 4.5vw;
+        }
+        .team-vs {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            text-align: center;
+            font-family: Gill Sans, Verdana;
+            font-size: 4.5vw;
+            align-items: center;
+            padding: 0 20px;
+            img {
+                border-radius: 50%;
+                width: 25px;
+                height: 20px;
+            }
+            .col-name {
+                div {
+                    width: 20vw;
+                    max-width: 20vw;
+                    text-transform: lowercase;
+                }
+                div::first-letter {
+                    text-transform: uppercase;
+                }
+            }
+            .logo {
+                display: flex;
+                align-items: center;
+            }
         }
     }
     .team-side {
