--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content">
+<ion-menu [content]="content" [swipeEnabled]="false">
     <!-- Left Menu -->
     <ion-content class="content-menu">
         <div class="ava-side">
