--- a/src/pages/bet/bet.scss
+++ b/src/pages/bet/bet.scss
@@ -11,8 +11,8 @@ page-bet {
         margin: 0;
     }
     .home-content {
-        background: url('../assets/images/bg/bg-main3.jpg') no-repeat;
-        background-size: cover;
+        // background: url('../assets/images/bg/bg-main3.jpg') no-repeat;
+        // background-size: cover;
     }
     .toolbar-background {
         background-color: transparent;
@@ -20,10 +20,8 @@ page-bet {
     .toolbar-title {
         display: flex;
         justify-content: center;
-        color: #E0BB92;
-        img {
-            width: 35vw;
-        }
+        color: white;
+        font-family: Gill Sans, Verdana;
     }
     h2 {
         font-size: 5vw;
