--- a/src/pages/ranking/ranking.scss
+++ b/src/pages/ranking/ranking.scss
@@ -11,56 +11,32 @@ page-ranking {
         margin: 0;
     }
     .home-content {
-        background: url('../assets/images/bg/bg-main3.jpg') no-repeat;
-        background-size: cover;
         .logo-rank {
             text-align: center;
-            padding-bottom: 20px;
+            padding-bottom: 10px;
             img {
-                width: 150px;
-                height: 150px;
+                width: 100px;
+                height: 100px;
+                animation: bounceIn 1s;
             }
         }
-        .list-ios {
-            background: linear-gradient(270deg, #c6a682, #16120e);
-            background-size: 400% 400%;
-            -webkit-animation: AnimationName 9s ease infinite;
-            -moz-animation: AnimationName 9s ease infinite;
-            animation: AnimationName 9s ease infinite;
-            @-webkit-keyframes AnimationName {
-                0% {
-                    background-position: 0% 50%
-                }
-                50% {
-                    background-position: 100% 50%
-                }
-                100% {
-                    background-position: 0% 50%
-                }
-            }
-            @-moz-keyframes AnimationName {
-                0% {
-                    background-position: 0% 50%
-                }
-                50% {
-                    background-position: 100% 50%
-                }
-                100% {
-                    background-position: 0% 50%
-                }
-            }
-            @keyframes AnimationName {
-                0% {
-                    background-position: 0% 50%
-                }
-                50% {
-                    background-position: 100% 50%
-                }
-                100% {
-                    background-position: 0% 50%
-                }
-            }
-            border-radius: 20px;
+        h1 {
+            color: black;
+            text-align: center;
+            font-family: Gill Sans, Verdana;
+            margin: 0;
+            padding-bottom: 7vw;
+        }
+        h5 {
+            margin: 0;
+            text-align: center;
+            font-size: 3.5vw;
+            color: #3366BB;
+            text-decoration: underline;
+            font-family: Gill Sans, Verdana;
+        }
+        .list-rank {
+            margin: 0;
         }
         .list-ios>.item-block:first-child {
             border-top: none;
@@ -75,24 +51,20 @@ page-ranking {
     .toolbar-title {
         display: flex;
         justify-content: center;
-        color: #E0BB92;
-        img {
-            width: 35vw;
-        }
+        color: white;
+        font-family: Gill Sans, Verdana;
     }
     //background-color: rgba(0, 0, 0, 0.6);
     .item-ios {
-        padding-left: 16px;
+        padding-left: 0 !important;
         border-radius: 0;
         position: relative;
         font-size: 1.7rem;
-        color: white;
+        color: black;
         background: none;
-        -webkit-transition: background-color 200ms linear;
-        transition: background-color 200ms linear;
         ion-avatar {
             background: white;
-            border-radius: 50%;
+            border-radius: 10px;
             img {
                 width: 50px;
                 height: 50px;
@@ -103,6 +75,7 @@ page-ranking {
             justify-content: space-between;
             align-items: center;
             h2 {
+                font-family: Gill Sans, Verdana;
                 white-space: nowrap;
                 width: 8em;
                 overflow: hidden;
@@ -110,6 +83,18 @@ page-ranking {
             }
             .point-side {
                 padding-right: 10px;
+                font-family: Gill Sans, Verdana;
+            }
+        }
+    }
+    .footer-rank {
+        background: #c21a24;
+        ion-title {
+            padding: 0 !important;
+            .toolbar-title {
+                display: flex;
+                justify-content: space-between;
+                padding: 0 8vw;
             }
         }
     }
