--- a/src/pages/bet/bet.scss
+++ b/src/pages/bet/bet.scss
@@ -40,8 +40,8 @@ page-bet {
         background-color: white;
         border-radius: 10px;
         color: black;
-        height: 43%;
         margin-top: 5%;
+        padding-bottom:10px;
         .vs{
             font-size: 80%;
             color: $vs-color;
