update filter number

--- a/src/components/modalbet/modalbet.html
+++ b/src/components/modalbet/modalbet.html
@@ -31,9 +31,9 @@
         <div>
             <p><i>*<u>Notes:</u></i></p>
             <ul type="disc">
-                <li><span>Current point: </span><span class="number">10000</span></li>
-                <li><span>Maximum Bet: </span><span class="number">5000</span></li>
-                <li><span>Minimum Bet: </span><span class="number">1000</span></li>
+                <li><span>Current point: </span><span class="number">{{10000 | number}}</span></li>
+                <li><span>Maximum Bet: </span><span class="number">{{5000 | number}}</span></li>
+                <li><span>Minimum Bet: </span><span class="number">{{1000 | number}}</span></li>
             </ul>
         </div>
     </div>
